navigation & currunt location complete V2

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">
+    android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical"
+    android:background="#FFF">
 
     <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:id="@+id/viewArea">
+        android:id="@+id/viewArea"
+        android:layout_below="@+id/findDestinationEditText">
 
 
 
@@ -16,11 +18,6 @@
 
     </EditText>
 
-    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
-        android:id="@+id/findButton"
-        android:text= "FIND"
-        android:layout_alignRight="@+id/findDestinationEditText">
 
-    </Button>
 
 </RelativeLayout>
